fix(doc): p descendant of p in dom

--- a/site/pages/index.mdx
+++ b/site/pages/index.mdx
@@ -1,6 +1,4 @@
-<p align="center">
-    <h1 align="center">particule</h1>
-</p>
+<h1 align="center">particule</h1>
 
 <p align="center" style={{ display: 'flex', justifyContent: 'center' }}>
     <a href="https://github.com/QuiiBz/particule/actions">
@@ -11,11 +9,12 @@
     </a>
 </p>
 
-<p align="center">
+<div align="center">
+  <br />
   Fine-grained <b>atomic</b> React state management library
   <br />
   <code>yarn add particule</code>
-</p>
+</div>
 
 ---
 
