docs(links): open codesandbox in new tabs

--- a/site/pages/index.mdx
+++ b/site/pages/index.mdx
@@ -32,7 +32,7 @@
 
 ### Basic
 
-<a href="https://codesandbox.io/s/basic-example-particule-l79zc?file=/src/App.tsx">
+<a href="https://codesandbox.io/s/basic-example-particule-l79zc?file=/src/App.tsx" target="_blank">
   <img src="https://img.shields.io/badge/code-sandbox-black" />
 </a>
 
@@ -53,7 +53,7 @@ function App() {
 
 ### Fine-grained
 
-<a href="https://codesandbox.io/s/fine-grained-example-particule-lxnse?file=/src/App.tsx:0-453">
+<a href="https://codesandbox.io/s/fine-grained-example-particule-lxnse?file=/src/App.tsx:0-453" target="_blank">
   <img src="https://img.shields.io/badge/code-sandbox-black" />
 </a>
 
@@ -86,7 +86,7 @@ function App() {
 
 ### Composition
 
-<a href="https://codesandbox.io/s/composition-example-particule-7ln35?file=/src/App.tsx">
+<a href="https://codesandbox.io/s/composition-example-particule-7ln35?file=/src/App.tsx" target="_blank">
   <img src="https://img.shields.io/badge/code-sandbox-black" />
 </a>
 
@@ -109,7 +109,7 @@ function App() {
 
 ### Suspense
 
-<a href="https://codesandbox.io/s/suspense-example-particule-w5gj1?file=/src/App.tsx">
+<a href="https://codesandbox.io/s/suspense-example-particule-w5gj1?file=/src/App.tsx" target="_blank">
   <img src="https://img.shields.io/badge/code-sandbox-black" />
 </a>
 
@@ -137,7 +137,7 @@ function App() {
 
 ### Custom `atom` with hooks
 
-<a href="https://codesandbox.io/s/custom-atom-with-hooks-example-particule-yifif?file=/src/App.tsx">
+<a href="https://codesandbox.io/s/custom-atom-with-hooks-example-particule-yifif?file=/src/App.tsx" target="_blank">
   <img src="https://img.shields.io/badge/code-sandbox-black" />
 </a>
 
