chore(docs): add dispatch docs

--- a/site/pages/index.mdx
+++ b/site/pages/index.mdx
@@ -135,6 +135,32 @@ function App() {
 }
 ```
 
+### Dispatch
+
+<a href="https://codesandbox.io/s/dispatch-particule-0p60u?file=/src/App.tsx" target="_blank">
+  <img src="https://img.shields.io/badge/code-sandbox-black" />
+</a>
+
+```tsx
+const counterAtom = atom(0)
+const dispatchCounter = dispatch(counterAtom, value => ({
+  increment: (newValue: number) => value + newValue,
+  decrement: (newValue: number) => value - newValue,
+}))
+
+function App() {
+  const counter = useGetAtom(counterAtom)
+
+  return (
+    <>
+      <p>{counter}</p>
+      <button onClick={() => dispatchCounter('increment', 1)}>Increment</button>
+      <button onClick={() => dispatchCounter('decrement', 1)}>Decrement</button>
+    </>
+  )
+}
+```
+
 ### Custom `atom` with hooks
 
 <a href="https://codesandbox.io/s/custom-atom-with-hooks-example-particule-yifif?file=/src/App.tsx" target="_blank">
